# DataScience

./: .gitignore  bernoulli.py  binom.py  cluster.py  correlation.py  exponential.py  gradient_descent.py  hypothesis_testing.py  linear_regression.py  main.py  neural_net.py  normal.py  poisson.py  pyproject.toml  vector.py
