[tool.poetry]
name = "datascience"
version = "0.1.0"
description = ""
authors = ["wilfred11 <wilfredvancasteren@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scipy = "^1.15.2"
numpy = "^2.2.4"
openpyxl = "==3.2.0b1"
matplotlib = "^3.10.1"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
